# JetBrainsDolphinPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install-binaries-user.sh  install-user.sh  install.sh  uninstall.sh
.github/workflows/: ci.yaml
src/: CMakeLists.txt  jetbrainsdolphinplugin.cpp  jetbrainsdolphinplugin.desktop  jetbrainsdolphinplugin.h  jetbrainsdolphinplugin.json
